--- a/docker-deploy/training_template/docker-compose.yml
+++ b/docker-deploy/training_template/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - ./confs/eggroll/conf:/data/projects/fate/eggroll/conf
     networks:
       - fate-network
-    command: ["bash", "-c", "java -Dlog4j.configurationFile=$${EGGROLL_HOME}/conf/log4j2.properties -cp $${EGGROLL_HOME}/lib/*:$${EGGROLL_HOME}/conf/ com.webank.eggroll.rollsite.Proxy -c $${EGGROLL_HOME}/conf/eggroll.properties"]
+    command: ["bash", "-c", "java -Dlog4j.configurationFile=$${EGGROLL_HOME}/conf/log4j2.properties -cp $${EGGROLL_HOME}/lib/*:$${EGGROLL_HOME}/conf/ com.webank.eggroll.rollsite.EggSiteBootstrap -c $${EGGROLL_HOME}/conf/eggroll.properties"]
   
   fateboard:
     image: "federatedai/fateboard:${TAG}"
@@ -110,7 +110,8 @@ services:
       - clustermanager
       - nodemanager
     networks:
-      - fate-network
+      fate-network: 
+          ipv4_address: "192.167.0.15"
     
   client:
     image: "federatedai/client:${TAG}"
