--- a/docker-deploy/training_template/docker-example-dir-tree/fate_flow/conf/service_conf.yaml
+++ b/docker-deploy/training_template/docker-example-dir-tree/fate_flow/conf/service_conf.yaml
@@ -1,10 +1,14 @@
 work_mode: 1
-independent_scheduling_proxy: false
 use_registry: false
 fateflow:
-  host: 0.0.0.0
+  # you must set real ip address or 127.0.0.1, 0.0.0.0 is not supported
+  host: 192.167.0.15
   http_port: 9380
   grpc_port: 9360
+  # support rollsite or nginx as a coordinate proxy, rollsite recommended in the fate on eggroll, nginx is recommended in the fate on spark
+  # format(proxy: rollsite) means rollsite use the rollsite configuration of fate_one_eggroll and nginx use the nginx configuration of fate_one_spark
+  # you can customize the config by format(proxy:\n name: rollsite \n host: xx \n port: xx)
+  proxy: rollsite
 fateboard:
   host: <fateboard_ip>
   port: <fateboard_port>
@@ -16,61 +20,60 @@ database:
   port: 3306
   max_connections: 100
   stale_timeout: 30
-EGGROLL:
-  address:
+fate_on_eggroll:
+  clustermanager:
+    cores_per_node: 20
+    nodes: 1
+  rollsite:
     host: <rollsite_ip>
     port: <rollsite_port>
-  cores_per_node: 20
-  nodes: 1
-SPARK:
-  address:
+fate_on_spark:
+  spark:
+    # default use SPARK_HOME environment variable
     home:
-  cores_per_node: 20
-  nodes: 2
-HDFS:
-  address:
+    cores_per_node: 20
+    nodes: 2
+  hdfs:
     name_node: hdfs://fate-cluster
+    # default /
     path_prefix:
-RABBITMQ:
-  address:
-    self:
-      9999: 
-      mng_port: 12345
-      port: 5672
-      user: <rabbitmq.username>
-      passwd: <rabbitmq.password>
-    10000:
-      host: 
-      port: 
-PROXY:
-  address:
+  rabbitmq:
+    host: 192.168.0.4
+    mng_port: 12345
+    port: 5672
+    user: fate
+    password: fate
+    # default conf/rabbitmq_route_table.yaml
+    route_table:
+  nginx:
     host: 127.0.0.1
-    port: 9373
+    port: 9390
 model_store_address:
   storage: mysql
   name: model
   host: 127.0.0.1
   port: 3306
-  user: <jdbc.username>
-  passwd: <jdbc.password>
+  user: fate
+  passwd: fate
   max_connections: 10
   stale_timeout: 10
-data_storage_address:
-  user: <jdbc.username>
-  passwd: <jdbc.password>
-  host: 127.0.0.1
-  port: 3306
 servings:
   hosts:
-    - <serving_ip>:<serving_port>
+    - 127.0.0.1:8000
 zookeeper:
   hosts:
     - 127.0.0.1:2281
   use_acl: true
   user: <zk.username>
-  passwd: <zk.password>
+  password: <zk.password>
 fatemanager:
   host: 127.0.0.1
   port: 8001
   federatedId: 0
+
+
+
+
+
+
 
