--- a/helm-charts/FATE/templates/rollsite-module.yaml
+++ b/helm-charts/FATE/templates/rollsite-module.yaml
@@ -50,6 +50,12 @@ data:
                         "ip": "{{ .Values.modules.python.fateflowIp }}",
                         "port": 9360
                     }
+                ],
+                "default": [
+                    {
+                        "ip": "proxy",
+                        "port": 9370
+                    }
                 ]
             }
         },
@@ -93,7 +99,7 @@ spec:
           command:
           - bash
           - -c
-          - "java -Dlog4j.configurationFile=$${EGGROLL_HOME}/conf/log4j2.properties -cp $${EGGROLL_HOME}/lib/*:$${EGGROLL_HOME}/conf/ com.webank.eggroll.rollsite.Proxy -c $${EGGROLL_HOME}/conf/eggroll.properties"
+          - "java -Dlog4j.configurationFile=$${EGGROLL_HOME}/conf/log4j2.properties -cp $${EGGROLL_HOME}/lib/*:$${EGGROLL_HOME}/conf/ com.webank.eggroll.rollsite.EggSiteBootstrap -c $${EGGROLL_HOME}/conf/eggroll.properties"
           ports:
             - containerPort: 9370
           volumeMounts:
