--- a/helm-charts/FATE/values.yaml
+++ b/helm-charts/FATE/values.yaml
@@ -44,6 +44,23 @@ modules:
     fateflowIp: fateflow
     fateflowType: ClusterIP
     nodeSelector: {}
+    spark: 
+      home: fate-9999-spark-master
+      cores_per_node: 20
+      nodes: 2
+    hdfs:
+      name_node: hdfs://fate-cluster
+      path_prefix:
+    rabbitmq:
+      host: 192.168.0.4
+      mng_port: 12345
+      port: 5672
+      user: fate
+      password: fate
+      route_table:
+    nginx:
+      host: 127.0.0.1
+      port: 9390
   clustermanager: 
     include: true
     ip: clustermanager
@@ -189,6 +206,31 @@ modules:
         storageClass: "-"
         accessMode: ReadWriteOnce
         size: 200Gi
+  nginx:
+    replicaCount: 1
+    image:
+      repository: k8s.gcr.io/nginx-ingress-controller
+      tag: "0.8.3"
+      pullPolicy: IfNotPresent
+    service:
+      type: NodePort
+    monitoring: false
+    resources:
+      limits:
+        cpu: 1
+        memory: 2Gi
+      requests:
+        cpu: 1
+        memory: 128Mi
+    configmap:
+      proxy_connect_timeout: "30"
+      proxy_read_timeout: "600"
+      proxy_send_imeout: "600"
+      hsts_include_subdomains: "false"
+      body_size: "64m"
+      server_name_hash_bucket_size: "256"
+      # TODO: figure out how to expose `{nginx_addr}:8080/nginx_status`, on existing service or create new one?
+      enable_vts_status: "false"
   rabbitmq:
     include: true
     rabbitmqUsername: guest
