--- a/helm-charts/FATE/templates/ingress.yaml
+++ b/helm-charts/FATE/templates/ingress.yaml
@@ -28,6 +28,26 @@ spec:
 ---
 {{ end }}
 
+{{ if .Values.modules.pythonSpark.include }}
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: fateboard
+  labels:
+    fateMoudle: fateboard
+{{ include "fate.labels" . | indent 4 }}
+spec:
+  rules:
+  - host: {{ .Values.host.fateboard }}
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: fateboard
+          servicePort: 8080
+---
+{{ end }}
+
 {{ if .Values.modules.client.include }}
 apiVersion: extensions/v1beta1
 kind: Ingress
