--- a/helm-charts/FATE/values-template.yaml
+++ b/helm-charts/FATE/values-template.yaml
@@ -160,104 +160,45 @@ modules:
   serving:
     ip: {{ .servingIp }}
     port: {{ .servingPort }}
-  Spark:
+  pythonSpark:
+    include: {{ has "pythonSpark" .modules }}
+    fateflowType: ClusterIP
+    nodeSelector: {}
+  fateboard:
+    include: {{ has "fateboard" .modules }}
+    type: ClusterIP
+  spark:
     include: {{ has "spark" .modules }}
-    Path: "/opt/spark"
-    Master:
-      {{- $master := .spark.master }}
-      Name: master
-      Image: "{{ $master.Image }}"
-      ImageTag: "{{ $master.ImageTag }}"
-      Replicas: {{ $master.Replicas }}
-      Component: "spark-master"
-      Cpu: "{{ $master.Cpu }}"
-      Memory: "{{ $master.Memory }}"
-      ServicePort: 7077
-      ContainerPort: 7077
-      # Set Master JVM memory. Default 1g
-      # DaemonMemory: 1g
-      ServiceType: ClusterIP
-    WebUi:
-      Name: webui
-      ServicePort: 8080
-      ContainerPort: 8080
-      Component: "spark-webui"
-      Ingress:
-        Enabled: true
-        Path: "/"
-        Hosts:
-        - 9999.sparkui.kubefate.net
-        Tls: []
-      #    - Hosts:
-      #    SecretName: zeppelin
-      # Used to create an Ingress record.
-      # Hosts:
-      # - example.local
-      # Annotations:
-      #   kubernetes.io/ingress.class: nginx
-      #   kubernetes.io/tls-acme: "true"
-      # Tls:
-      #   Enabled: true
-      # Secrets must be manually created in the namespace.
-      #   SecretName: example-tls
-      #   Hosts:
-      #   - example.local
-    Worker:
-      {{- $worker := .spark.worker }}
-      Name: worker
-      Image: "{{ $worker.Image }}"
-      ImageTag: "{{ $worker.ImageTag }}"
-      Replicas: {{ $worker.Replicas }}
-      Component: "spark-worker"
-      Cpu: "{{ $worker.Cpu }}"
-      Memory: "{{ $worker.Memory }}"
-      ContainerPort: 8081
-      # Set Worker JVM memory. Default 1g
-      # DaemonMemory: 1g
-      # Set how much total memory workers have to give executors
-      # ExecutorMemory: 1g
-      Autoscaling:
-        Enabled: {{ $worker.Autoscaling.Enabled }}
-      ReplicasMax: {{ $worker.ReplicasMax }}
-      CpuTargetPercentage: 50
-  hdfs:
-    include: {{ has "spark" .modules }}
-    antiAffinity: "soft"
-    image:
-      repository: danisla/hadoop
-      tag: 2.9.0
-      pullPolicy: IfNotPresent
-
-    nameNode:
-      pdbMinAvailable: 1
-      resources:
-        requests:
-          memory: "256Mi"
-          cpu: "10m"
-        limits:
-          memory: "2048Mi"
-          cpu: "1000m"
-    dataNode:
+    master:
+      Image: "bde2020/spark-master"
+      ImageTag: "2.4.1-hadoop2.7"
       replicas: 1
-      pdbMinAvailable: 1
-      resources:
-        requests:
-          memory: "256Mi"
-          cpu: "10m"
-        limits:
-          memory: "2048Mi"
-          cpu: "1000m"
-    webhdfs:
-      enabled: false
-    persistence:
-      nameNode:
-        enabled: false
-        storageClass: "-"
-        accessMode: ReadWriteOnce
-        size: 50Gi
-      dataNode:
-        enabled: false
-        storageClass: "-"
-        accessMode: ReadWriteOnce
-        size: 200Gi
-
+      nodeSelector: {}
+      type: ClusterIP
+    worker:
+      Image: "bde2020/spark-worker"
+      ImageTag: "2.4.1-hadoop2.7"
+      replicas: 1
+      nodeSelector: {}
+      type: ClusterIP
+  hdfs:
+    include: {{ has "hdfs" .modules }}
+    namenode:
+      nodeSelector: {}
+      type: ClusterIP
+    datanode:
+      nodeSelector: {}
+      type: ClusterIP
+  nginx:
+    include: {{ has "nginx" .modules }}
+    nodeSelector: {}
+    type: ClusterIP
+    route_table: 
+{{ toYaml .nginx.route_table | indent 6 }}
+  rabbitmq:
+    include: {{ has "rabbitmq" .modules }}
+    nodeSelector: {}
+    type: ClusterIP
+    route_table:
+{{ toYaml .rabbitmq.route_table | indent 6 }}
+    
